# simple_tcp_file_transport

./: .gitignore  CMakeLists.txt  README.md
docs/: Custom TCP File Transfer.md  report_phase4_performance.md  task.md  technical_design.md
include/: file_transfer.h  tcp_connection.h  tcp_protocol.h  tcp_socket.h
src/: file_transfer.cpp  main.cpp  tcp_connection.cpp  tcp_socket.cpp
